# solana-token-min-app

./: package-lock.json  package.json
anchor_cli/: bosvb8cYPX8LMTj7AG6q4Nqw3GMuNCDafQY8kjj52Gj.json  mntetjbaqwSEPS3ms7c9Crwor1PKybJq46qr6LWTjf2.json
anchor_cli/sol_transfer/: Anchor.toml
anchor_cli/sol_transfer/programs/sol_transfer/: Cargo.toml
anchor_cli/sol_transfer/programs/sol_transfer/src/: lib.rs
anchor_cli/sol_transfer/tests/: sol_transfer.ts
app/: layout.tsx  page.tsx  store.ts  types.ts  utiles.tsx
app/Components/: WalletConextProvider.tsx
app/NFT/: layout.tsx  page.tsx
app/api/walletConnect/: route.ts
contracts/NFT_mint/: idl.json
