[package]
name = "token-transfer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_transfer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-heap = []
custom-panic = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
]


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"